services/payment-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment-service
    monitoring: enabled
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
    - name: http
      port: 8085
      targetPort: 8085
